Updated to use aws s3 as image storage

--- a/views/pets/edit.ejs
+++ b/views/pets/edit.ejs
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
         <div class="left">
-            <div id="imgULUI" class="edit" value="<%= pet.images.cover %>">
+            <div id="imgULUI" class="edit" value="https://petbase.s3.us-east-2.amazonaws.com/<%= pet.images.cover %>">
                 <label class="imgUpDis">
                     <div id="previewImgArea">
                         <div id="ulDirections">
