--- a/views/pets/show.ejs
+++ b/views/pets/show.ejs
@@ -14,7 +14,7 @@
         <h3><%= pet.name %>'s Pet Record</h3>     
     </div>
     <div class="row-img">
-        <img class="ulprev" src="<%=pet.images.cover%>">
+        <img class="ulprev" src="https://petbase.s3.us-east-2.amazonaws.com/<%=pet.images.cover%>">
     </div>
     <div class="row">
         <div class="item">
