--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,8 +13,7 @@
             <h3>Register</h3>
         </div>
         <div class="row">
-        Function not supported until website goes live!
-<%# <form action="/" method="post">
+<form action="/" method="post">
     <div class="row">
     <div>
         <label for="username">Username: </label>
@@ -30,7 +29,7 @@
     <div class="row">
         <button>Sign Up</button>
     </div>
-</form> %>
+</form>
 </div>
 <div class="footer"></div>
 <% include partials/footer %>
