--- a/views/search/index.ejs
+++ b/views/search/index.ejs
@@ -32,7 +32,7 @@
         <div class="overlay">
             <span>Click to learn more about this <%=currPet.species%>.</span>
         </div>
-        <img class="results-img" src="<%=currPet.images.cover%>">
+        <img class="results-img" src="https://petbase.s3.us-east-2.amazonaws.com/<%=currPet.images.cover%>">
       </div>
       <div class="right">
         <h3>
