--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -30,7 +30,7 @@
             </a>
           </form>
         </div>
-        <img class="results-img" src="<%=currPet.images.cover%>">
+        <img class="results-img" src="https://petbase.s3.us-east-2.amazonaws.com/<%=currPet.images.cover%>">
       </div>
       <div class="right short">
         <h3>
