--- a/views/pets/show.ejs
+++ b/views/pets/show.ejs
@@ -1,5 +1,6 @@
 <% include ../partials/header %>
 <% include ../partials/navbarUp %>
+<script type="text/javascript" src="/js/pets/delete.js"></script>
 <link rel="stylesheet" type="text/css" media="screen" href="/css/pets/show.css">
 
 <div class="container">
@@ -42,10 +43,12 @@
                     <i class="fas fa-edit"></i> Edit
                 </button>
             </a>
-            <form action="/pets/<%= pet.id %>?_method=DELETE" method="POST">
-                <button>
+
+            <button id="button-delete" onclick="deletePet.delConfirm('<%= pet.name %>', 'delete-<%=pet.id%>')">
                     <i class="far fa-trash-alt"></i> Delete
-                </button>
+            </button>
+
+            <form id="delete-<%=pet.id%>" name="deleteConfirmed" action="/pets/<%= pet.id %>?_method=DELETE" method="POST">
             </form>
 
         <% } %>
