--- a/views/partials/blurbs/adoptions.ejs
+++ b/views/partials/blurbs/adoptions.ejs
@@ -1,3 +1,24 @@
-
-                            Adoptions
-                            A way to easily search for a the perfect pet.
+<div id="blurbadoptions-content">
+    <div class="content-paragraph">
+        For anyone interested in adoptions, Petbase is the perfect forum to list and search for your next pet.
+    </div>
+    <div class="content-paragraph">
+        To list a pet for adoption, you will need to sign up for an account. With an account you be able to create a pet record for any pet you wish to list for adoption. People looking to adopt pets will then ba able to easily see your pets information.
+    </div>
+    <div class="content-paragraph">
+        To search adoptable pets, you don't need an account but if you plan on adopting a pet you will need an account to contact the pet owner of the pet you are interested in. Once you adopt a pet, the Petbase record can be transfered to you and you will be able to use it to keep your pets information for future use.
+    </div>
+    <div class="menu-wrapper">
+        <div class="menu">
+            <li class='menu-item'><a class="homelink" href="/register">
+                <i class="fas fa-user-plus"></i> Sign up for an account
+            </a>
+            </li>
+            <li class='menu-item'>
+            <a class="homelink" href="/search">
+                <i class="fas fa-search"></i> Search for an adoptable pet
+            </a>
+            </li>
+        </div>
+    </div>
+</div>
