--- a/views/partials/blurbs/intro.ejs
+++ b/views/partials/blurbs/intro.ejs
@@ -1,1 +1,22 @@
-Petbase can be used in different ways by different users. Choose what type of user you are on the left to see more details.
+<div id="blurbintro-content">
+    <div>
+        Petbase is a website dedicated to make storing and sharing important pet information as simple and easy as possible for everyone involved in a pets life. This means that Petbase can be used in different ways by different users. What type of user are you?
+    </div>
+    
+    <div class='menu-wrapper'>
+        <div class='menu-header'>
+            I am...
+        </div>
+        <div class='menu'>
+            <li class='menu-item infoUserCatLink' id='petOwnersLink'>
+                <a class="homelink"><i class="fas fa-user"></i> A pet owner </a>
+            </li>
+            <li class='menu-item infoUserCatLink' id='adoptionsLink'>
+                <a class="homelink"><i class="fas fa-users"></i> Interested in pet adoptions</a>
+            </li>
+            <li class='menu-item infoUserCatLink' id='professionalsLink'>
+                <a class="homelink"><i class="fas fa-user-md"></i> A pet professional</a>
+            </li>
+        </div>
+    </div>
+</div>
