--- a/views/partials/blurbs/owners.ejs
+++ b/views/partials/blurbs/owners.ejs
@@ -1,5 +1,15 @@
-
-                            Pet owners
-                            A way for pet owners to keep important information about thier pet.
-                            In case of loss.
-                            For sharing with professionals. 
+<div id="blurbpetOwners-content">
+<div class="content-paragraph">
+    For pet owners, Petbase is an easy way to keep track of and share your pet records. With Petbase you are able to easily make an owner profile and create all records for each of your pets. You are easily able to share these records with the profressionals who help take care of your pet. Vets, groomers and pet location services will be able to easily see your pet records and have access to your entire pets care history. If you give them permission, the pet professional can also update your pet records with detailed notes and records of service.
+</div>
+<div class="content-paragraph">
+    To get started, sign up for an account.
+</div>
+    <div class="menu-wrapper">
+        <div class="menu">
+            <a class="homelink" href="/register">
+                <i class="fas fa-user-plus"></i> Sign up for an account
+            </a>
+        </div>
+    </div>
+</div>
