--- a/views/partials/blurbs/professionals.ejs
+++ b/views/partials/blurbs/professionals.ejs
@@ -1,5 +1,16 @@
-
-                            Professionals
-                            A way to keep pet owners pet records organized and readily avalible.
-                            Keep track of records.
-                            Keep track of pet personality and owner preferences.
+<div id="blurbprofessionals-content">
+    <div class="content-paragraph">
+        For Professionals who work with pets, Petbase can help keep pet records organized and readily avalible. If a pet owner gives you permission, you will be able to add records directly to the pet record for the pet user to view. In addition, you will also be able to add technical jargon to pet records that is only appropriate between Professionals.
+    </div>
+    <div class="content-paragraph">
+        You do not need an account to see a pet record, but in order to modify the pet record you will need the pet owners permission and an account of your own.
+    </div>
+    <div class="menu-wrapper">
+        <div class="menu">
+            <li class='menu-item'><a class="homelink" href="/register">
+                <i class="fas fa-user-plus"></i> Sign up for an account
+            </a>
+            </li>
+        </div>
+    </div>
+</div>
