sanitized user input, added ckeditor5

--- a/public/css/pets/new.css
+++ b/public/css/pets/new.css
@@ -245,3 +245,9 @@ small{
 .footer{
     height: 32px;
 }
+
+.ck-editor__editable_inline {
+    min-height: 250px;
+    min-width: 350px;
+    width: 65vw;
+}
