--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,7 +13,8 @@
             <h3>Register</h3>
         </div>
         <div class="row">
-<form action="/" method="post">
+            Disabled for now!
+<!-- <form action="/" method="post">
     <div class="row">
     <div>
         <label for="username">Username: </label>
@@ -29,7 +30,7 @@
     <div class="row">
         <button>Sign Up</button>
     </div>
-</form>
+</form> -->
 </div>
 <div class="footer"></div>
 <% include partials/footer %>
